Templating update about

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -152,7 +152,7 @@ jQuery(document).ready(function($) {
 
     var work = [
     {{ with .Site.Params.work.details }}
-        '\n---\n' +
+        '---\n' +
         {{ range .}}
             '[[b;{{ .color | default "grey" }};]{{ .jobTitle }}]\n' +
             {{ if .company }}
@@ -250,22 +250,14 @@ jQuery(document).ready(function($) {
          {{ end }}
     ];
 
-    var source =  '        _______            \n' +
-                  '       |       |           \n' +
-                  '       |       |           \n' +
-                  '       |_______|_______    \n' +
-                  '               |       |   \n' +
-                  '               |       |   \n' +
-                  ' ______________|_______|   \n' +
-                  '|      |       |       |   \n' +
-                  '|      |       |       |   \n' +
-                  '|______|_______|_______|   \n' +
-                  '[[;red;]May the source be with you]\n' +
-                  '[[;grey;]https://github.com/coolapso/hugo-theme-terminalcv\n';
+    var source = [
+         {{ with .Site.Params.source }}
+        '[[b;{{ .contentColor }};]{{ .content }}]\n',
+         {{ end }}
+    ];
 
     var all = [
         whois,
-        social(),
         work,
         education,
         certifications,
@@ -275,9 +267,6 @@ jQuery(document).ready(function($) {
         projects,
         {{ if .Site.Params.misc }}
           misc,
-        {{ end }}
-        {{ if .Site.Params.source }}
-          source,
         {{ end }}
     ]
 
@@ -417,6 +406,10 @@ jQuery(document).ready(function($) {
                 useLess = true;
                 {{ end }}
                 echoArray(all.flat(1));
+                echoLinks(social());
+                {{ if .Site.Params.source }}
+                  echoArray(source);
+                {{ end }}
                 break;
             {{ if .Site.Params.startxLocation }}
             case 'startx':
@@ -444,9 +437,6 @@ jQuery(document).ready(function($) {
                 term.echo("nice try");
                 break;
             case 'source':
-                {{ if .Site.Params.misc.settings.useLess }}
-                useLess = true;
-                {{ end }}
                 term.echo(source);
                 break;
             case 'exit':
