Updating about and project

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@ jQuery(document).ready(function($) {
             {{ .Site.Params.misc.commandName | default "other" }}: "{{.Site.Params.misc.title }}",
         {{ end }}
         {{ if .Site.Params.Source }}
-            source: "shows details about template powering this website",
+            source: "Details about the website",
         {{ end }}
         {{ if .Site.Params.version }}
             version: "Current version",
