--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,46 +4,45 @@ jQuery(document).ready(function($) {
     var animation = false;
 
     var commands = {
-        {{ if .Site.Params.certifications }}
-            certifications: "Badges",
-            //certs: "Badges",
-        {{ end }}
-        education: "Education and more",
-        exit: "Exit the terminal",
-        {{ if .Site.Params.github }}
-            github: "{{ .Site.Params.github.description }}",
-        {{ end }}
-        help: "Shows this message",
+        "===== ME =====": "",
+        education: "Education and badges",
         {{ if .Site.Params.misc }}
             {{ .Site.Params.misc.commandName | default "other" }}: "{{.Site.Params.misc.title }}",
         {{ end }}
-        {{ if .Site.Params.instagram }}
-            instagram: "{{ .Site.Params.instagram.description }}",
-        {{ end }}
         languages: "Spoken languages",
-        less: "Use less as output method",
-        {{ if .Site.Params.linkedin }}
-            linkedin: "{{ .Site.Params.linkedin.description }}",
-        {{ end }}
-        {{ if .Site.Params.projects }}
-            projects: "Personal projects",
-        {{ end }}
         skills: "Tech skills",
         social: "Social networks",
         {{ if .Site.Params.softskills }}
             softskills: "Useful skills",
         {{ end }}
-        {{ if .Site.Params.Source }}
-            source: "Details about the website",
-        {{ end }}
-        {{ if .Site.Params.startxLocation }}
-            startx: "Go to my blog :)",
-        {{ end }}
-        {{ if .Site.Params.version }}
-            version: "Current version",
+        {{ if .Site.Params.projects }}
+            projects: "Personal projects",
         {{ end }}
         whois: "Admin details",
         work: "Work experience",
+        "=== SOCIAL ===": "",
+        {{ if .Site.Params.github }}
+            github: "{{ .Site.Params.github.description }}",
+        {{ end }}
+        {{ if .Site.Params.instagram }}
+            instagram: "{{ .Site.Params.instagram.description }}",
+        {{ end }}
+        {{ if .Site.Params.linkedin }}
+            linkedin: "{{ .Site.Params.linkedin.description }}",
+        {{ end }}
+        {{ if .Site.Params.startxLocation }}
+            startx: "Redirect to my blog :)",
+        {{ end }}
+        "=== OTHERS ===": "",
+        {{ if .Site.Params.version }}
+            version: "Current version",
+        {{ end }}
+        exit: "Exit the terminal",
+        help: "Shows this message",
+        less: "Use less as output method",
+        {{ if .Site.Params.Source }}
+            source: "Details about the website",
+        {{ end }}
     };
 
     function progressBar(number) {
@@ -75,8 +74,8 @@ jQuery(document).ready(function($) {
                 ' <command> - execute the command\n' +
                 ' less <command> - use less to display the output\n\n' +
                 '\n[[b;white;]Available commands:]\n' +
-                '[[b;white;] all \t\t\tShow all details]\n' +
-               commandsHelp();
+               commandsHelp() +
+                '[[b;white;] all \t\t\t Show all details]\n';
 
     var whois = [
     {{ with .Site.Params.whois.details }}
@@ -359,6 +358,7 @@ jQuery(document).ready(function($) {
                 useLess = true;
                 {{ end }}
                 echoArray(education);
+                echoArray(certifications);
                 break;
             case 'skills':
                 {{ if .Site.Params.skills.settings.useLess }}
